--- a/shippingcity/res/values/attrs.xml
+++ b/shippingcity/res/values/attrs.xml
@@ -8,5 +8,8 @@
         <attr name="valueColor" format="reference|color"></attr>
         <attr name="valueSize" format="dimension"></attr>
     </declare-styleable>
-    
+    <declare-styleable name="CircleImageView">
+        <attr name="border_width" format="dimension" />
+        <attr name="border_color" format="color" />
+    </declare-styleable>
 </resources>
