--- a/shippingcity/res/layout/activity_main.xml
+++ b/shippingcity/res/layout/activity_main.xml
@@ -1,97 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/res/com.ateam.shippingcity">
+    android:orientation="vertical" >
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/layout_main_content"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical" >
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="120dp"
-            >
-
-            <com.ateam.shippingcity.widget.banner.AutoScrollViewPager
-                android:id="@+id/auto_view_page"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true" />
-
-            <com.ateam.shippingcity.widget.viewpagerindicator.CirclePageIndicator
-                android:id="@+id/indicator"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                app:radius="6dp"
-                app:pageColor="#FF888888"
-        		app:strokeColor="#FF000000"
-                app:fillColor="#88FF0000"
-                app:strokeWidth="2dp"
-                />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:baselineAligned="false"
-            android:layout_marginTop="20dp"
-            android:minHeight="100dp"
-            android:background="@android:color/black"
-            android:orientation="horizontal" >
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:gravity="center" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/ic_launcher"
-                    android:textColor="#ffffff"
-                    android:text="货盘区" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:gravity="center" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/ic_launcher"
-                    android:textColor="#ffffff"
-                    android:text="我的报价" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center_vertical"
-            android:minHeight="80dp"
-            android:background="@android:color/black"
-            android:orientation="horizontal"
-            android:paddingLeft="20dp" >
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:drawableLeft="@drawable/ic_launcher"
-                android:drawableRight="@drawable/ic_launcher"
-                android:gravity="center_vertical"
-                android:textColor="#ffffff"
-                android:text="一键客服" />
-        </LinearLayout>
-    </LinearLayout>
+        
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -100,6 +20,7 @@
         android:orientation="horizontal" >
 
         <TextView
+            android:id="@+id/txt_home"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -109,6 +30,7 @@
             android:text="首页" />
 
         <TextView
+            android:id="@+id/txt_pallet_district"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -118,6 +40,7 @@
             android:text="货盘区" />
 
         <TextView
+            android:id="@+id/txt_my_quote"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
