--- a/shippingcity/res/layout/item_action_bar_title.xml
+++ b/shippingcity/res/layout/item_action_bar_title.xml
@@ -10,6 +10,7 @@
 	    android:layout_height="fill_parent"
 	    android:gravity="center"
 	    android:ellipsize="end"
+	    android:ems="8"
 	    android:singleLine="true"
 	    android:textColor="@android:color/white"
 	    android:textSize="20sp"
