--- a/shippingcity/res/layout/activity_base.xml
+++ b/shippingcity/res/layout/activity_base.xml
@@ -8,7 +8,7 @@
         android:id="@+id/layout_action_bar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#00a2e3"
+        android:background="#292C35"
         android:gravity="center"
         android:minHeight="60dp"
         android:orientation="horizontal"
