--- a/shippingcity/res/layout/activity_home.xml
+++ b/shippingcity/res/layout/activity_home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res/com.ateam.shippingcity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#292C35"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -20,13 +21,18 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            app:fillColor="#88FF0000"
-            app:pageColor="#FF888888"
-            app:radius="8dp"
             android:padding="10dip"
-            app:strokeColor="#FF000000"
+            app:fillColor="#FFFFFF"
+            app:pageColor="#B0B5B7"
+            app:radius="8dp"
+            app:strokeColor="@android:color/transparent"
             app:strokeWidth="2dp" />
     </RelativeLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="#AD7015" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -34,13 +40,15 @@
         android:layout_marginTop="20dp"
         android:background="@android:color/black"
         android:baselineAligned="false"
-        android:minHeight="100dp"
+        android:minHeight="150dp"
         android:orientation="horizontal" >
 
         <LinearLayout
+            android:id="@+id/layout_pallet"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:background="#3F434F"
             android:gravity="center" >
 
             <TextView
@@ -48,13 +56,15 @@
                 android:layout_height="wrap_content"
                 android:drawableTop="@drawable/ic_launcher"
                 android:text="货盘区"
-                android:textColor="#ffffff" />
+                android:textColor="@color/white" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout_quote"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:background="#363A45"
             android:gravity="center" >
 
             <TextView
@@ -67,13 +77,14 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/layout_call"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
-        android:background="@android:color/black"
+        android:background="#363A45"
         android:gravity="center_vertical"
-        android:minHeight="80dp"
+        android:minHeight="100dp"
         android:orientation="horizontal"
         android:paddingLeft="20dp" >
 
