--- a/shippingcity/res/layout/activity_main.xml
+++ b/shippingcity/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/black"
+        android:background="#F8F8F8"
         android:orientation="horizontal" >
 
         <TextView
@@ -26,7 +26,6 @@
             android:layout_weight="1"
             android:drawableTop="@drawable/ic_launcher"
             android:gravity="center"
-            android:textColor="#ffffff"
             android:text="首页" />
 
         <TextView
@@ -36,7 +35,6 @@
             android:layout_weight="1"
             android:drawableTop="@drawable/ic_launcher"
             android:gravity="center"
-            android:textColor="#ffffff"
             android:text="货盘区" />
 
         <TextView
@@ -45,7 +43,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableTop="@drawable/ic_launcher"
-            android:textColor="#ffffff"
             android:gravity="center"
             android:text="我的报价" />
     </LinearLayout>
