--- a/shippingcity/res/layout/activity_personl_center_dialog.xml
+++ b/shippingcity/res/layout/activity_personl_center_dialog.xml
@@ -63,6 +63,7 @@
 	    android:textColor="@color/white"
 	    />
 	<TextView 
+	    android:id="@+id/txt_setting"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:drawableLeft="@drawable/ic_launcher"
