--- a/shippingcity/res/layout/activity_personl_center_dialog.xml
+++ b/shippingcity/res/layout/activity_personl_center_dialog.xml
@@ -27,6 +27,7 @@
 	    android:layout_marginTop="10dp"
 	    android:text="AWE DSP"
 	    android:textColor="@color/white"
+	    android:textSize="20sp"
 	    />
 	</LinearLayout>
 	<TextView 
@@ -38,6 +39,7 @@
 	    android:gravity="center_vertical"
 	    android:drawablePadding="10dp"
 	    android:text="我的积分"
+	    android:textSize="18sp"
 	    android:textColor="@color/white"
 	    />
 	<TextView 
@@ -49,6 +51,7 @@
 	    android:gravity="center_vertical"
 	    android:drawablePadding="10dp"
 	    android:text="我关注的货盘"
+	    android:textSize="18sp"
 	    android:textColor="@color/white"
 	    />
 	<TextView 
@@ -60,6 +63,7 @@
 	    android:gravity="center_vertical"
 	    android:drawablePadding="10dp"
 	    android:text="邀请好友"
+	    android:textSize="18sp"
 	    android:textColor="@color/white"
 	    />
 	<TextView 
@@ -72,6 +76,7 @@
 	    android:gravity="center_vertical"
 	    android:drawablePadding="10dp"
 	    android:text="设置"
+	    android:textSize="18sp"
 	    android:textColor="@color/white"
 	    />
 </LinearLayout>
