--- a/shippingcity/res/layout/activity_picture_select_dialog.xml
+++ b/shippingcity/res/layout/activity_picture_select_dialog.xml
@@ -11,6 +11,7 @@
 	    android:layout_height="wrap_content"
 	    android:minHeight="50dp"
 	    android:text="拍照"
+	    android:textSize="18sp"
 	    android:background="#ffffff"
 	    android:gravity="center"
 	    />
@@ -25,6 +26,7 @@
 	    android:layout_height="wrap_content"
 	    android:minHeight="50dp"
 	    android:text="从手机相册选择"
+	    android:textSize="18sp"
 	    android:background="#ffffff"
 	    android:gravity="center"
 	    />
@@ -35,6 +37,7 @@
 	    android:minHeight="50dp"
 	    android:layout_marginTop="15dp"
 	    android:text="取消"
+	    android:textSize="18sp"
 	    android:background="#ffffff"
 	    android:gravity="center"
 	    />
