--- a/shippingcity/res/layout/fragment_pallet.xml
+++ b/shippingcity/res/layout/fragment_pallet.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-	 <com.mtaiyi.eloan.widget.viewpagerindicator.TabPageIndicator
+	 <com.ateam.shippingcity.widget.viewpagerindicator.TabPageIndicator
             android:id="@+id/tab_indicator"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
