--- a/shippingcity/res/layout/activity_home.xml
+++ b/shippingcity/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="120dp" >
+        android:layout_height="130dp" >
 
         <com.ateam.shippingcity.widget.banner.AutoScrollViewPager
             android:id="@+id/auto_view_page"
@@ -36,11 +36,12 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="20dp"
         android:background="@android:color/black"
         android:baselineAligned="false"
         android:minHeight="150dp"
+        android:layout_weight="1"
         android:orientation="horizontal" >
 
         <LinearLayout
@@ -80,7 +81,7 @@
         android:id="@+id/layout_call"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="40dp"
         android:layout_marginTop="20dp"
         android:background="#363A45"
         android:gravity="center_vertical"
