--- a/shippingcity/res/layout/activity_base.xml
+++ b/shippingcity/res/layout/activity_base.xml
@@ -36,8 +36,17 @@
             android:layout_width="30dp"
             android:layout_height="fill_parent"
             android:src="@drawable/ic_launcher"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:contentDescription="@string/app_name" />
+        <TextView 
+            android:id="@+id/txt_right"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:gravity="center"
+            android:minWidth="50dp"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            />
     </LinearLayout>
 	<ViewStub 
 	    android:id="@+id/vs_error"
