--- a/shippingcity/res/layout/activity_base_x_list.xml
+++ b/shippingcity/res/layout/activity_base_x_list.xml
@@ -6,7 +6,7 @@
     android:background="#f0f0f0"
     android:orientation="vertical" >
     
-	<com.team.hbase.widget.xlist.XListView
+	<com.ateam.shippingcity.widget.xlist.XListView
 	    android:id="@+id/xListView"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
