--- a/shippingcity/res/layout/activity_personl_center_dialog.xml
+++ b/shippingcity/res/layout/activity_personl_center_dialog.xml
@@ -10,7 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#292C35"
-        android:minHeight="150dp"
+        android:minHeight="200dp"
         android:gravity="center"
         android:orientation="vertical" >
 	<com.ateam.shippingcity.widget.imageview.CircleImageView
@@ -31,6 +31,7 @@
 	    />
 	</LinearLayout>
 	<TextView 
+	    android:id="@+id/txt_my_integral"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:drawableLeft="@drawable/ic_launcher"
