--- a/shippingcity/res/layout/activity_personal_integral_rule.xml
+++ b/shippingcity/res/layout/activity_personal_integral_rule.xml
@@ -1,8 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+<com.ateam.shippingcity.widget.ElasticScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/white"
+    android:fillViewport="true" xmlns:app="http://schemas.android.com/apk/res/com.ateam.shippingcity">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:orientation="vertical" >
+        <TextView 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="\t\t为了奖励广大从事外贸的同胞对航运城app的支持，特别设计了积分产品，您注册、完善并认证资料、推荐好友等都会获得相应的积分奖励。"
+            />
+        <TextView 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="\t\t您获得的积分可以在我们的积分商城兑换精美礼品或现金哦！"
+            android:textColor="#FF7474"
+            />
+        <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/frame"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            >
+            <com.ateam.shippingcity.widget.TextViewPair
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:nameText="积分规则"
+                app:valueText="可获得积分"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                />
+            <View 
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#E8EDEF"
+                />
+            <com.ateam.shippingcity.widget.TextViewPair
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:nameText="手机注册"
+                app:nameColor="#858585"
+                app:valueText="40"
+                app:valueColor="#FFAF4C"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="50dp"
+                />
+            <View 
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#E8EDEF"
+                />
+            <com.ateam.shippingcity.widget.TextViewPair
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:nameText="完善个人资料"
+                app:nameColor="#858585"
+                app:valueText="40"
+                app:valueColor="#FFAF4C"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="50dp"
+                />
+            <View 
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#E8EDEF"
+                />
+            <com.ateam.shippingcity.widget.TextViewPair
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:nameText="个人认证"
+                app:nameColor="#858585"
+                app:valueText="40"
+                app:valueColor="#FFAF4C"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="50dp"
+                />
+            <View 
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#E8EDEF"
+                />
+            <com.ateam.shippingcity.widget.TextViewPair
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:nameText="公司认证"
+                app:nameColor="#858585"
+                app:valueText="40"
+                app:valueColor="#FFAF4C"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="50dp"
+                />
+            <View 
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#E8EDEF"
+                />
+            <com.ateam.shippingcity.widget.TextViewPair
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:nameText="推荐1-10人"
+                app:nameColor="#858585"
+                app:valueText="50(每人)"
+                app:valueColor="#FFAF4C"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                />
+            <View 
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#E8EDEF"
+                />
+            <com.ateam.shippingcity.widget.TextViewPair
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:nameText="推荐11-100"
+                app:nameColor="#858585"
+                app:valueText="100(每人)"
+                app:valueColor="#FFAF4C"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                />
+            <View 
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#E8EDEF"
+                />
+            <com.ateam.shippingcity.widget.TextViewPair
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:nameText="推荐100以上"
+                app:nameColor="#858585"
+                app:valueText="150(每人)"
+                app:valueColor="#FFAF4C"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                />
+            <View 
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#E8EDEF"
+                />
+            <com.ateam.shippingcity.widget.TextViewPair
+                android:id="@+id/txt1"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:nameText="发布货盘\n每天积分上限100"
+                app:nameColor="#858585"
+                app:valueText="20(每个)"
+                app:valueColor="#FFAF4C"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                />
+        </LinearLayout>
+    </LinearLayout>
+
+</com.ateam.shippingcity.widget.ElasticScrollView>
