--- a/shippingcity/res/layout/activity_personl_login_dialog.xml
+++ b/shippingcity/res/layout/activity_personl_login_dialog.xml
@@ -17,6 +17,7 @@
         />
     
     <com.ateam.shippingcity.widget.HAutoCompleteTextView
+        android:id="@+id/et_username"
         android:layout_marginTop="30dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -25,7 +26,9 @@
         android:hint="手机号/用户名"
         android:textColorHint="#3B3E49"
         android:drawablePadding="10dp"
+        android:text="15280256971"
         />
+    <!-- 15805935223 -->
     <View 
         android:layout_width="fill_parent"
         android:layout_height="1dp"
@@ -33,6 +36,7 @@
         android:layout_marginTop="3dp"
         />
     <com.ateam.shippingcity.widget.HAutoCompleteTextView
+        android:id="@+id/et_password"
         android:layout_marginTop="30dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -42,6 +46,8 @@
         android:textColorHint="#3B3E49"
         android:textColor="#3F4452"
         android:drawablePadding="10dp"
+        android:text="123456"
+        android:inputType="textPassword"
         />
     <View 
         android:layout_width="fill_parent"
@@ -51,6 +57,7 @@
         />
         
     <Button 
+        android:id="@+id/btn_login"
         android:layout_marginTop="50dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
