2015-3-31 wtw 图片查看实现

--- a/shippingcity/res/layout/activity_pallet_detail.xml
+++ b/shippingcity/res/layout/activity_pallet_detail.xml
@@ -182,7 +182,7 @@
                 android:layout_marginLeft="@dimen/xlist_marginl"
                 android:layout_marginRight="@dimen/xlist_marginr"
                 android:background="@drawable/lineColor"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <LinearLayout
                 android:id="@+id/layout_addPhoto"
@@ -190,7 +190,7 @@
                 android:layout_height="@dimen/myQuote_item_height"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:visibility="gone" >
+                android:visibility="visible" >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -198,17 +198,38 @@
                     android:layout_marginLeft="@dimen/xlist_marginl"
                     android:text="@string/pallet_photo" />
 
-                <ScrollView
+                <!--
+                    <LinearLayout
+                        android:id="@+id/frame_addPhoto"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal" >
+                    </LinearLayout>
+                -->
+
+                <HorizontalScrollView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" >
+                    android:layout_weight="1"
+                    android:scrollbars="none" >
 
-                    <FrameLayout
-                        android:id="@+id/frame_addPhoto"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
-                    </FrameLayout>
-                </ScrollView>
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" >
+
+                        <com.ateam.shippingcity.widget.weinxinImageShow.NoScrollGridView
+		                    android:id="@+id/gv_addPhoto"
+		                    android:layout_width="fill_parent"
+		                    android:layout_height="wrap_content"
+		                    android:horizontalSpacing="1dp"
+		                    android:numColumns="5"
+		                    android:stretchMode="columnWidth"
+		                    android:verticalSpacing="1dp"
+		                    android:visibility="visible" />
+                    </LinearLayout>
+                </HorizontalScrollView>
 
                 <ImageView
                     android:layout_width="wrap_content"
