--- a/shippingcity/res/layout/activity_personl_center_dialog.xml
+++ b/shippingcity/res/layout/activity_personl_center_dialog.xml
@@ -14,6 +14,7 @@
         android:gravity="center"
         android:orientation="vertical" >
 	<com.ateam.shippingcity.widget.imageview.CircleImageView
+	    android:id="@+id/iv_user_portrait"
 	    android:layout_marginTop="10dp"
 	    android:layout_width="96dp"
 	    android:layout_height="96dp"
@@ -22,10 +23,10 @@
         app:border_width="2dp"
 	    />
 	<TextView 
+	    android:id="@+id/txt_username"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_marginTop="10dp"
-	    android:text="AWE DSP"
 	    android:textColor="@color/white"
 	    android:textSize="20sp"
 	    />
