--- a/shippingcity/res/layout/activity_regist.xml
+++ b/shippingcity/res/layout/activity_regist.xml
@@ -6,6 +6,7 @@
     android:padding="10dp" >
 
     <com.ateam.shippingcity.widget.HAutoCompleteTextView
+        android:id="@+id/et_mobile"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="请输入手机号"
