--- a/shippingcity/res/layout/activity_personal_feedback.xml
+++ b/shippingcity/res/layout/activity_personal_feedback.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical" >
     
 	<EditText 
+	    android:id="@+id/et_feedback_content"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:lines="6"
