2015-4-2 wtw 货运详情界面  接口对接（一半）

--- a/shippingcity/res/values/color.xml
+++ b/shippingcity/res/values/color.xml
@@ -145,6 +145,7 @@
     <color name="dustColor">#ecd6c5</color>
     
     <drawable name="my_offer">#FF9900</drawable>
+    <drawable name="carrotColor">#ed9121</drawable>
     <drawable name="lineColor">#F0F3F5</drawable>
     <color name="totalabout_Red">#E91C01</color>
     <color name="my_quote_select_selected">#6CA2EF</color>
