--- a/shippingcity/res/values/styles.xml
+++ b/shippingcity/res/values/styles.xml
@@ -32,13 +32,13 @@
     </style>
 	<!-- 选项卡自定义样式 -->
     <style name="CustomTabPageIndicator" parent="Widget.TabPageIndicator">
-        <!-- <item name="android:background">@drawable/custom_tab_indicator</item> -->
+        <item name="android:background">@drawable/custom_tab_indicator</item>
         <item name="android:textAppearance">@style/CustomTabPageIndicator.Text</item>
-        <item name="android:textColor">#FF555555</item>
         <item name="android:textSize">17sp</item>
-        <!-- <item name="android:divider">@drawable/custom_tab_indicator_divider</item> -->
-        <!-- <item name="android:dividerPadding">10dp</item>
-        <item name="android:showDividers">middle</item> -->
+        <!-- <item name="android:divider">@drawable/custom_tab_indicator_divider</item>
+        <item name="android:dividerPadding">10dp</item> -->
+        <item name="android:showDividers">middle</item>
+        <item name="android:textColor">@drawable/tab_select_color</item>  
         <item name="android:paddingLeft">8dp</item>
         <item name="android:paddingRight">5dp</item>
         <item name="android:fadingEdge">horizontal</item>
