--- a/shippingcity/res/layout/activity_personal_modify_password.xml
+++ b/shippingcity/res/layout/activity_personal_modify_password.xml
@@ -16,6 +16,7 @@
 	    android:hint="旧密码"
 	    android:layout_marginTop="5dp"
 	    android:textCursorDrawable="@color/text_cursor"
+	    android:inputType="textPassword"
 	    >
 	</com.ateam.shippingcity.widget.HAutoCompleteTextView>
 	<com.ateam.shippingcity.widget.HAutoCompleteTextView
@@ -28,6 +29,7 @@
 	    android:paddingRight="10dp"
 	    android:layout_marginTop="5dp"
 	    android:hint="新密码"
+	    android:inputType="textPassword"
 	    android:textCursorDrawable="@color/text_cursor"
 	    >
 	</com.ateam.shippingcity.widget.HAutoCompleteTextView>
@@ -41,6 +43,7 @@
 	    android:paddingRight="10dp"
 	    android:layout_marginTop="5dp"
 	    android:hint="确认新密码"
+	    android:inputType="textPassword"
 	    android:textCursorDrawable="@color/text_cursor"
 	    >
 	</com.ateam.shippingcity.widget.HAutoCompleteTextView>
