--- a/shippingcity/res/layout/activity_personal_info.xml
+++ b/shippingcity/res/layout/activity_personal_info.xml
@@ -274,6 +274,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableRight="@drawable/ic_launcher"
+                    android:ellipsize="end"
+                    android:ems="10"
                     android:gravity="center"
                     android:text="未填写"
                     android:textColor="#CFCFCF" />
