2015-04-04 Helen 忘记密码接口对接

--- a/shippingcity/res/layout/activity_forget_password.xml
+++ b/shippingcity/res/layout/activity_forget_password.xml
@@ -6,6 +6,7 @@
     android:padding="10dp" >
 
     <com.ateam.shippingcity.widget.HAutoCompleteTextView
+        android:id="@+id/et_mobile"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="请输入手机号"
@@ -43,17 +44,21 @@
     </LinearLayout>
 
     <com.ateam.shippingcity.widget.HAutoCompleteTextView
+        android:id="@+id/et_new_password"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="请输入新密码"
+        android:inputType="textPassword"
         android:minHeight="50dp" />
 
     <com.ateam.shippingcity.widget.HAutoCompleteTextView
+        android:id="@+id/et_confirm_password"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="确认新密码"
+        android:inputType="textPassword"
         android:minHeight="50dp" />
     
     <Button 
