--- a/shippingcity/res/layout/activity_main.xml
+++ b/shippingcity/res/layout/activity_main.xml
@@ -15,6 +15,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#F8F8F8"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:orientation="horizontal" >
 
         <TextView
@@ -22,8 +24,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:drawableTop="@drawable/ic_launcher"
+            android:drawableTop="@drawable/tab_bar_home_selector"
             android:gravity="center"
+            android:drawablePadding="8dp"
             android:text="首页" />
 
         <TextView
@@ -31,8 +34,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:drawableTop="@drawable/ic_launcher"
+            android:drawableTop="@drawable/tab_bar_my_quote_selector"
             android:gravity="center"
+            android:drawablePadding="8dp"
             android:text="货盘区" />
 
         <TextView
@@ -40,7 +44,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:drawableTop="@drawable/ic_launcher"
+            android:drawableTop="@drawable/tab_bar_my_quote_selector"
+            android:drawablePadding="8dp"
             android:gravity="center"
             android:text="我的报价" />
     </LinearLayout>
