--- a/shippingcity/res/layout/activity_personl_center_dialog.xml
+++ b/shippingcity/res/layout/activity_personl_center_dialog.xml
@@ -18,7 +18,7 @@
 	    android:layout_marginTop="10dp"
 	    android:layout_width="96dp"
 	    android:layout_height="96dp"
-	    android:src="@drawable/ic_launcher"
+	    android:src="@drawable/personal_center_not_yet_certified_icon"
         app:border_color="#54565D"
         app:border_width="2dp"
 	    />
@@ -26,60 +26,74 @@
 	    android:id="@+id/txt_username"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:layout_marginTop="10dp"
+	    android:layout_marginTop="15dp"
 	    android:textColor="@color/white"
-	    android:textSize="20sp"
+	    android:textSize="14sp"
+	    />
+	<TextView 
+	    android:id="@+id/txt_renzheng"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_marginTop="10dp"
+	    android:textColor="#f64c4c"
+	    android:textSize="12sp"
+	    android:text="尚未认证"
+	    android:visibility="gone"
 	    />
 	</LinearLayout>
 	<TextView 
 	    android:id="@+id/txt_my_integral"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:drawableLeft="@drawable/ic_launcher"
+	    android:drawableLeft="@drawable/personal_center_my_points_icon"
 	    android:background="#23252D"
-	    android:minHeight="50dp"
+	    android:minHeight="60dp"
 	    android:gravity="center_vertical"
 	    android:drawablePadding="10dp"
+	    android:paddingLeft="20dp"
 	    android:text="我的积分"
-	    android:textSize="18sp"
+	    android:textSize="15sp"
 	    android:textColor="@color/white"
 	    />
 	<TextView 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:drawableLeft="@drawable/ic_launcher"
+	    android:drawableLeft="@drawable/personal_center_concerned_about_icon"
 	    android:background="#23252D"
-	    android:minHeight="50dp"
+	    android:minHeight="60dp"
 	    android:gravity="center_vertical"
 	    android:drawablePadding="10dp"
+	    android:paddingLeft="20dp"
 	    android:text="我关注的货盘"
-	    android:textSize="18sp"
+	    android:textSize="15sp"
 	    android:textColor="@color/white"
 	    />
 	<TextView 
 	    android:id="@+id/txt_invite_friend"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:drawableLeft="@drawable/ic_launcher"
+	    android:drawableLeft="@drawable/personal_center_invite_friends_icon"
 	    android:background="#23252D"
-	    android:minHeight="50dp"
+	    android:minHeight="60dp"
 	    android:gravity="center_vertical"
 	    android:drawablePadding="10dp"
 	    android:text="邀请好友"
-	    android:textSize="18sp"
+	    android:paddingLeft="20dp"
+	    android:textSize="15sp"
 	    android:textColor="@color/white"
 	    />
 	<TextView 
 	    android:id="@+id/txt_setting"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:drawableLeft="@drawable/ic_launcher"
+	    android:drawableLeft="@drawable/personal_center_set_icon"
 	    android:background="#23252D"
-	    android:minHeight="50dp"
+	    android:minHeight="60dp"
 	    android:gravity="center_vertical"
 	    android:drawablePadding="10dp"
 	    android:text="设置"
-	    android:textSize="18sp"
+	    android:textSize="15sp"
+	    android:paddingLeft="20dp"
 	    android:textColor="@color/white"
 	    />
 </LinearLayout>
