--- a/shippingcity/res/layout/activity_regist.xml
+++ b/shippingcity/res/layout/activity_regist.xml
@@ -48,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:minHeight="50dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal" >
 
         <CheckBox
@@ -55,7 +56,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="阅读并同意"
-            android:textColor="#6473CC"
+            android:button="@drawable/btn_check_selector"
+            android:textColor="#64A6FF"
             android:textSize="16sp" />
 
         <TextView
@@ -63,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="《航运城许可及服务协议》"
-            android:textColor="#6473CC"
+            android:textColor="#64A6FF"
             android:textSize="16sp" />
     </LinearLayout>
 
